--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,68 @@ html,
 body {
   height: 100%;
 }
+.container {
+  margin: auto 23%;
+}
+nav {
+  display: flex;
+  justify-content: flex-end;
+}
+.header-box {
+  display: flex;
+  flex-direction: column;
+  background: #E9ECEF;
+  padding: 5% 2.5%;
+}
+.about {
+  display: flex;
+  justify-content: space-between;
+}
+.about-box1 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 48%;
+}
+.about-box1 h2 {
+  width: 100%;
+}
+.about-box2 {
+  display: flex;
+  flex-wrap: wrap;
+  width: 48%;
+}
+.about-box2 h2 {
+  width: 100%;
+}
+.about-box2 .sub-box {
+  width: 100%;
+  padding: 2.5%;
+  border-top: 1px solid gray;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+}
+.about-box2 :nth-child(6) {
+  border-bottom: 1px solid gray;
+}
+#gray-back {
+  background: #F2F2F2;
+  border-top: 1px solid #DFE3E7;
+  border-bottom: 1px solid #DFE3E7;
+}
+.history-box {
+  width: 100%;
+  display: flex;
+  padding: 1.5%;
+}
+.history-box .yrs {
+  width: 11%;
+}
+.history-box .company {
+  width: 22%;
+}
+.history-box .title {
+  width: 55%;
+}
+.history-box .tech-used {
+  width: 22%;
+}
