--- a/less/index.less
+++ b/less/index.less
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 62.5%;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -59,23 +59,56 @@ html, body {
 
 .container {
 	margin: auto 23%;
+	h1 {
+		font-size: 2rem;
+	}
+
+	h2 {
+		font-size: 1.6rem;
+	}
+
+	button {
+		font-size: 1rem;
+		color: white;
+		background-color: gray;
+		border: 0;
+		padding: 1.5% 2%;
+		border-radius: 2.5px;
+	}
 }
 
 nav {
 	display: flex;
 	justify-content: flex-end;
+	padding: 3% 0;
+
+	a {
+		text-decoration: none;
+		margin-left: 3%;
+		color: black;
+	}
 }
 
 .header-box {
 	display: flex;
 	flex-direction: column;
-	background: #E9ECEF;
-	padding: 5% 2.5%;
+	background: #EAECEF;
+	padding: 10% 3.5%;
+	border-radius: 12px;
+
+	img {
+		border-radius: 12px;
+	}
+}
+
+.head-box2 {
+	border-top: 1px solid lightgray;
 }
 
 .about {
 	display: flex;
 	justify-content: space-between;
+	margin: 5% auto;
 }
 
 .about-box1 {
@@ -103,6 +136,14 @@ nav {
 		border-top: 1px solid gray;
 		border-left: 1px solid gray;
 		border-right: 1px solid gray;
+	}
+}
+
+.work-history {
+	margin-bottom: 5%;
+
+	h3 {
+		font-weight: bold;
 	}
 }
 
@@ -135,5 +176,17 @@ nav {
 
 	.tech-used {
 		width: 22%;
+	}
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	background-color: darkgray;
+	color: white;
+	font-size: .8rem;
+
+	p {
+		margin: 2.5%;
 	}
 }
